--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,13 @@ img {
 .main-section {
   background: var(--NAVY-BLUE, #2e2f42);
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .button {
   border-radius: 4px;
@@ -247,6 +254,19 @@ img {
   flex-direction: column;
   text-align: center;
 }
+.benefit-icon {
+  width: 100%;
+  height: 112px;
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: var(--CLOUD, #f4f4fd);
+  box-sizing: content-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
 /* SECTION OUR PORTFOLIO*/
 .section-our-portfolio {
   background: #fff;
