--- a/css/styles.css
+++ b/css/styles.css
@@ -327,7 +327,37 @@ img {
   padding: 32px 16px;
   border-top: none;
 }
+.icon-portfolio-image {
+  position: relative;
+  overflow: hidden;
+}
+.overlay-text {
+  color: var(--CLOUD, #f4f4fd);
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+  display: block;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
 
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 250ms linear;
+}
+.icon-portfolio:hover .overlay {
+  transform: translateY(0%);
+}
+.icon-portfolio:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
 /* FOOTER */
 .footer {
   background: var(--NAVY-BLUE, #2e2f42);
