--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,8 @@ img {
 .header {
   background: var(--WHITE, #fff);
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .top_header {
   display: flex;
@@ -165,6 +167,7 @@ img {
   bottom: 0;
   border-radius: 2px;
   justify-content: center;
+  bottom: -1px;
 }
 /* SECTION EFFECTIVE SOLUTIONS */
 .main-title {
@@ -192,6 +195,8 @@ img {
     url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+  max-width: 1440px;
 }
 .button {
   border-radius: 4px;
@@ -308,7 +313,8 @@ img {
   fill: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-list-link:hover {
+.social-list-link:hover,
+.social-list-link:focus {
   background-color: #404bbf;
 }
 .social-list-icon {
