--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,7 @@ img {
   background-size: cover;
   background-position: center;
   max-width: 1440px;
+  margin: 0 auto;
 }
 .button {
   border-radius: 4px;
@@ -404,7 +405,6 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-  padding: 24px 0;
 
   display: inline-block;
   margin-bottom: 16px;
@@ -420,8 +420,6 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-
-  padding: 24px 0;
 
   display: inline-block;
   margin-bottom: 16px;
