--- a/css/styles.css
+++ b/css/styles.css
@@ -456,3 +456,71 @@ img {
 .social-list-link-footer:focus {
   background-color: #31d0aa;
 }
+/* BACKDROP */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 584px;
+  background-color: #fcfcfc;
+  border-radius: 4px;
+  padding: 24px;
+}
+.modal-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  background-color: #e7e9fc;
+  border: 1px;
+  border-radius: 50%;
+  line-height: 0;
+  stroke: #2e2f42;
+  stroke-width: 1px;
+  fill: #2e2f42;
+
+  transition: stroke 250ms linear, background-color 250ms linear,
+    fill 250ms linear;
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  stroke: #ffffff;
+  fill: #ffffff;
+  background-color: #404bbf;
+}
+.modal-sentence {
+  text-align: center;
+
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-top: 48px;
+  margin-bottom: 16px;
+}
